  CHANGED: Initial Konfigurator size is now 900x680
     
     I18N: Updated Hungarian translation
     I18N: Updated Slovenian translation
     I18N: Updated Swedish translation (thanks Peter Landgren)


2.0.0-beta2 "Space Odyssey"
=========================

    ADDED: shortcuts: copy by queue (SHIFT+F5), move by queue (SHIFT+F6)
    ADDED: Krusader support for tar.lzma (KDE's tar protocol doesn't support it yet)
    ADDED: Possibility to choose one of five sorting methods (thanks to Jacek Jaworski)
    ADDED: compare by content for search / locate
    ADDED: New mouse selection mode
    ADDED: Evolution can be used as the default e-mail sender (thanks to Agustin Henze)
    ADDED: enqueue operation for copy / move
    ADDED: Konfigurator mouse selection mode: Possibility to select a predefined
           mode and change a detail. 
    ADDED: [ 1704953 ] highlight quick search match
    ADDED: Useractions: added checkbox "enabled"
           and run mode option "Run in embedded terminal emulator"
    ADDED: the description of a dir contains its size if it is known

     ARCH: MediaButton uses Solid for medium detection
     ARCH: QuickSearch is moved to KrView from Detailed/Brief views
     ARCH: Keyboard handling is moved to KrView from Detailed/Brief views

    FIXED: version number under Windows
    FIXED: the Win shortcuts doesn't work in the UserAction examples
    FIXED: [ 2091314 ] krviewer does not remember its window size
    FIXED: [ 2219012 ] user action icons are not saved
    FIXED: [ 2116505 ] Total Commander selection behavior broken
    FIXED: [ 2227421 ] Mount cdrom no longer needs root permission
    FIXED: Krusader steps into wrong directory, when a file changes in an inactive tab
    FIXED: When neither "kompare", "kdiff3" nor "xxdiff" in PATH, the program set in
           "diff utility" was ignored. Under Windows, look for them with ".exe" suffix
    FIXED: [ 2243628 ] Synchronizer overlooks files