@@ -1,3 +1,6 @@
+    FIXED: [ 2381505 ] Ctrl+Shift+D in editor (KWrite) not work
+    FIXED: Krusader fails to edit files containing international chars with Shift+F4
+
   CHANGED: Initial Konfigurator size is now 900x680
      
      I18N: Updated Hungarian translation
